ui: update button titles to fit into single line

--- a/templates/index_cards.html
+++ b/templates/index_cards.html
@@ -12,7 +12,7 @@
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Search{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Find zones and records{% endtrans %}</p>
                 <a href="index.php?page=search" class="btn btn-primary btn-sm mt-2" data-testid="search-link">
-                    <span class="d-none d-lg-inline">{% trans %}Search zones and records{% endtrans %}</span>
+                    <span class="d-none d-lg-inline">{% trans %}Search zones{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Search{% endtrans %}</span>
                 </a>
             </div>
@@ -216,7 +216,7 @@
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Permissions{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage permission templates{% endtrans %}</p>
                 <a href="index.php?page=list_perm_templ" class="btn btn-success btn-sm mt-2" data-testid="list-permission-templates-link">
-                    <span class="d-none d-lg-inline">{% trans %}List permission templates{% endtrans %}</span>
+                    <span class="d-none d-lg-inline">{% trans %}Permissions{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Permissions{% endtrans %}</span>
                 </a>
             </div>
