--- a/templates/index_cards.html
+++ b/templates/index_cards.html
@@ -109,12 +109,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-hdd-network text-dark display-4"></i>
+                <i class="bi bi-hdd-network text-warning display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Supermaster{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Add new supermaster server{% endtrans %}</p>
-                <a href="index.php?page=add_supermaster" class="btn btn-dark btn-sm mt-2" data-testid="add-supermaster-link">
+                <a href="index.php?page=add_supermaster" class="btn btn-warning btn-sm mt-2" data-testid="add-supermaster-link">
                     <span class="d-none d-lg-inline">{% trans %}Add supermaster{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Supermaster{% endtrans %}</span>
                 </a>
