--- a/templates/index_cards.html
+++ b/templates/index_cards.html
@@ -6,12 +6,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-search text-primary display-4"></i>
+                <i class="bi bi-search display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Search{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Find zones and records{% endtrans %}</p>
-                <a href="index.php?page=search" class="btn btn-primary btn-sm mt-2" data-testid="search-link">
+                <a href="index.php?page=search" class="btn btn-light btn-sm mt-2" data-testid="search-link">
                     <span class="d-none d-lg-inline">{% trans %}Search zones{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Search{% endtrans %}</span>
                 </a>
@@ -23,12 +23,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-diagram-3 text-info display-4"></i>
+                <i class="bi bi-diagram-3 display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Zones{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage DNS zones{% endtrans %}</p>
-                <a href="index.php?page=list_zones" class="btn btn-info btn-sm mt-2" data-testid="list-zones-link">
+                <a href="index.php?page=list_zones" class="btn btn-light btn-sm mt-2" data-testid="list-zones-link">
                     <span class="d-none d-lg-inline">{% trans %}List zones{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Zones{% endtrans %}</span>
                 </a>
@@ -41,12 +41,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-files text-success display-4"></i>
+                <i class="bi bi-files display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Templates{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage zone templates{% endtrans %}</p>
-                <a href="index.php?page=list_zone_templ" class="btn btn-success btn-sm mt-2" data-testid="list-zone-templates-link">
+                <a href="index.php?page=list_zone_templ" class="btn btn-light btn-sm mt-2" data-testid="list-zone-templates-link">
                     <span class="d-none d-lg-inline">{% trans %}List zone templates{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Templates{% endtrans %}</span>
                 </a>
@@ -58,12 +58,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-hdd-rack text-secondary display-4"></i>
+                <i class="bi bi-hdd-rack display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Supermasters{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage supermaster servers{% endtrans %}</p>
-                <a href="index.php?page=list_supermasters" class="btn btn-secondary btn-sm mt-2" data-testid="list-supermasters-link">
+                <a href="index.php?page=list_supermasters" class="btn btn-light btn-sm mt-2" data-testid="list-supermasters-link">
                     <span class="d-none d-lg-inline">{% trans %}List supermasters{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Supermasters{% endtrans %}</span>
                 </a>
@@ -75,12 +75,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-plus-circle text-danger display-4"></i>
+                <i class="bi bi-plus-circle display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Master Zone{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Create new master zone{% endtrans %}</p>
-                <a href="index.php?page=add_zone_master" class="btn btn-danger btn-sm mt-2" data-testid="add-master-zone-link">
+                <a href="index.php?page=add_zone_master" class="btn btn-light btn-sm mt-2" data-testid="add-master-zone-link">
                     <span class="d-none d-lg-inline">{% trans %}Add master zone{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Add Master{% endtrans %}</span>
                 </a>
@@ -92,12 +92,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-plus-circle-dotted text-secondary display-4"></i>
+                <i class="bi bi-plus-circle-dotted display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Slave Zone{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Add new slave zone{% endtrans %}</p>
-                <a href="index.php?page=add_zone_slave" class="btn btn-secondary btn-sm mt-2" data-testid="add-slave-zone-link">
+                <a href="index.php?page=add_zone_slave" class="btn btn-light btn-sm mt-2" data-testid="add-slave-zone-link">
                     <span class="d-none d-lg-inline">{% trans %}Add slave zone{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Add Slave{% endtrans %}</span>
                 </a>
@@ -109,12 +109,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-hdd-network text-warning display-4"></i>
+                <i class="bi bi-hdd-network display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Supermaster{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Add new supermaster server{% endtrans %}</p>
-                <a href="index.php?page=add_supermaster" class="btn btn-warning btn-sm mt-2" data-testid="add-supermaster-link">
+                <a href="index.php?page=add_supermaster" class="btn btn-light btn-sm mt-2" data-testid="add-supermaster-link">
                     <span class="d-none d-lg-inline">{% trans %}Add supermaster{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Supermaster{% endtrans %}</span>
                 </a>
@@ -126,12 +126,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-collection text-info display-4"></i>
+                <i class="bi bi-collection display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Bulk Registration{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Register multiple domains at once{% endtrans %}</p>
-                <a href="index.php?page=bulk_registration" class="btn btn-info btn-sm mt-2" data-testid="bulk-registration-link">
+                <a href="index.php?page=bulk_registration" class="btn btn-light btn-sm mt-2" data-testid="bulk-registration-link">
                     <span class="d-none d-lg-inline">{% trans %}Bulk domain registration{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Registration{% endtrans %}</span>
                 </a>
@@ -143,12 +143,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-arrow-repeat text-success display-4"></i>
+                <i class="bi bi-arrow-repeat display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}PTR Records{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage reverse DNS records{% endtrans %}</p>
-                <a href="index.php?page=batch_ptr_record" class="btn btn-success btn-sm mt-2" data-testid="batch-ptr-records-link">
+                <a href="index.php?page=batch_ptr_record" class="btn btn-light btn-sm mt-2" data-testid="batch-ptr-records-link">
                     <span class="d-none d-lg-inline">{% trans %}Batch PTR Records{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}PTR Records{% endtrans %}</span>
                 </a>
@@ -160,12 +160,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-list-ul text-primary display-4"></i>
+                <i class="bi bi-list-ul display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Zone Logs{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}View zone change history{% endtrans %}</p>
-                <a href="index.php?page=list_log_zones" class="btn btn-primary btn-sm mt-2" data-testid="zone-logs-link">
+                <a href="index.php?page=list_log_zones" class="btn btn-light btn-sm mt-2" data-testid="zone-logs-link">
                     <span class="d-none d-lg-inline">{% trans %}View zone logs{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Zone Logs{% endtrans %}</span>
                 </a>
@@ -178,12 +178,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-key text-warning display-4"></i>
+                <i class="bi bi-key display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Password{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Update your account password{% endtrans %}</p>
-                <a href="index.php?page=change_password" class="btn btn-warning btn-sm mt-2" data-testid="change-password-link">
+                <a href="index.php?page=change_password" class="btn btn-light btn-sm mt-2" data-testid="change-password-link">
                     <span class="d-none d-lg-inline">{% trans %}Change password{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Password{% endtrans %}</span>
                 </a>
@@ -194,12 +194,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-people text-primary display-4"></i>
+                <i class="bi bi-people display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Users{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage system users and access{% endtrans %}</p>
-                <a href="index.php?page=users" class="btn btn-primary btn-sm mt-2" data-testid="user-administration-link">
+                <a href="index.php?page=users" class="btn btn-light btn-sm mt-2" data-testid="user-administration-link">
                     <span class="d-none d-lg-inline">{% trans %}User administration{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Users{% endtrans %}</span>
                 </a>
@@ -210,12 +210,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-person-lock text-success display-4"></i>
+                <i class="bi bi-person-lock display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Permissions{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage permission templates{% endtrans %}</p>
-                <a href="index.php?page=list_perm_templ" class="btn btn-success btn-sm mt-2" data-testid="list-permission-templates-link">
+                <a href="index.php?page=list_perm_templ" class="btn btn-light btn-sm mt-2" data-testid="list-permission-templates-link">
                     <span class="d-none d-lg-inline">{% trans %}Permissions{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Permissions{% endtrans %}</span>
                 </a>
@@ -226,12 +226,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-box-arrow-right text-danger display-4"></i>
+                <i class="bi bi-box-arrow-right display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Logout{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}End your session{% endtrans %}</p>
-                <a href="index.php?page=logout" class="btn btn-outline-danger btn-sm mt-2" data-testid="logout-link">
+                <a href="index.php?page=logout" class="btn btn-light btn-sm mt-2" data-testid="logout-link">
                     <span>{% trans %}Logout{% endtrans %}</span>
                 </a>
             </div>
@@ -241,12 +241,12 @@
     <div class="col mb-1 card-item">
         <div class="card h-100 border-0 shadow-sm">
             <div class="card-header text-center bg-transparent border-0 pt-2">
-                <i class="bi bi-database-up text-info display-4"></i>
+                <i class="bi bi-database-up display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
                 <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Migrations{% endtrans %}</h6>
                 <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage database migrations{% endtrans %}</p>
-                <a href="index.php?page=migrations" class="btn btn-info btn-sm mt-2" data-testid="migrations-link">
+                <a href="index.php?page=migrations" class="btn btn-light btn-sm mt-2" data-testid="migrations-link">
                     <span class="d-none d-lg-inline">{% trans %}Database Migrations{% endtrans %}</span>
                     <span class="d-lg-none">{% trans %}Migrations{% endtrans %}</span>
                 </a>
