--- a/install/templates/step4.html.twig
+++ b/install/templates/step4.html.twig
@@ -1,9 +1,11 @@
 {% extends 'base.html.twig' %}
 
+{% block step_description %}{% trans %}Setup account and nameservers{% endtrans %}{% endblock %}
+
 {% block content %}
     <div class="card">
-        <div class="card-header bg-primary text-white">
-            <h5 class="mb-0">{% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Setup account and name servers{% endtrans %}</h5>
+        <div class="card-header bg-secondary text-white">
+            {% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Setup account and name servers{% endtrans %}
         </div>
         <div class="card-body">
             <div class="alert alert-info mb-4">
@@ -128,7 +130,7 @@
                     <input type="hidden" name="pa_pass" value="{{ pa_pass }}">
                     <input type="hidden" name="step" value="{{ next_step }}">
                     <input type="hidden" name="language" value="{{ language }}">
-                    <input type="submit" name="submit" class="btn btn-primary" value="{% trans %}Go to step{% endtrans %} {{ next_step }}">
+                    <input type="submit" name="submit" class="btn btn-sm btn-primary" value="{% trans %}Go to step{% endtrans %} {{ next_step }}">
                 </div>
             </form>
         </div>
