--- a/install/templates/step2.html.twig
+++ b/install/templates/step2.html.twig
@@ -1,9 +1,11 @@
 {% extends 'base.html.twig' %}
 
+{% block step_description %}{% trans %}Getting ready{% endtrans %}{% endblock %}
+
 {% block content %}
     <div class="card">
-        <div class="card-header bg-primary text-white">
-            <h5 class="mb-0">{% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Getting ready for installation{% endtrans %}</h5>
+        <div class="card-header bg-secondary text-white">
+            {% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Getting ready for installation{% endtrans %}
         </div>
         <div class="card-body">
             <div class="alert alert-info">
@@ -27,7 +29,7 @@
                     <input type="hidden" name="install_token" value="{{ install_token }}">
                     <input type="hidden" name="language" value="{{ language }}">
                     <input type="hidden" name="step" value="{{ next_step }}">
-                    <input type="submit" name="submit" class="btn btn-primary"
+                    <input type="submit" name="submit" class="btn btn-sm btn-primary"
                            value="{% trans %}Go to step{% endtrans %} {{ next_step }}">
                 </form>
             </div>
