--- a/install/templates/step6.html.twig
+++ b/install/templates/step6.html.twig
@@ -1,9 +1,11 @@
 {% extends 'base.html.twig' %}
 
+{% block step_description %}{% trans %}Create configuration file{% endtrans %}{% endblock %}
+
 {% block content %}
     <div class="card mb-4">
-        <div class="card-header bg-primary text-white">
-            <h5 class="mb-0">{% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Create configuration file{% endtrans %}</h5>
+        <div class="card-header bg-secondary text-white">
+            {% trans %}Step{% endtrans %} {{ current_step }}: {% trans %}Create configuration file{% endtrans %}
         </div>
         <div class="card-body">
             <div class="alert alert-success">
@@ -88,7 +90,7 @@ return [
                 <input type="hidden" name="install_token" value="{{ install_token }}">
                 <input type="hidden" name="step" value="{{ next_step }}">
                 <input type="hidden" name="language" value="{{ language }}">
-                <input type="submit" name="submit" class="btn btn-primary"
+                <input type="submit" name="submit" class="btn btn-sm btn-primary"
                        value="{% trans %}Go to step{% endtrans %} {{ next_step }}">
             </form>
         </div>
